change: set config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title : Wall-E - Jekyll
-description: 'A Modern Jekyll Theme'
+title : yahto1307'blog
+description: 'yahto1307 blog'
 
 markdown: kramdown
 highlighter: rouge
